--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@strapi/strapi": "4.9.1",
     "better-sqlite3": "8.0.1",
     "koa-sendfile": "^3.0.0",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "pg-connection-string": "^2.6.0"
   },
   "author": {
     "name": "A Strapi developer"
